# Interprocess-chat

./: CMakeLists.txt  README.md
headers/: client.h  lock.h  serv.h  sharedMemory.h
src/: client.c  lock.c  mainclient.c  mainserv.c  serv.c  sharedMemory.c
